2008-08-03  Arno Rehn  <arno@arnorehn.de>

	* Implemented KUrl.List.

2008-07-31  Arno Rehn  <arno@arnorehn.de>

	* Assign a new KApplication instance to the qApp global variable.

2008-07-07  Arno Rehn  <arno@arnorehn.de>

	* KimonoPluginFactory: If a class isn't found in the assembly, look
	  through all of the classes and pick the first one that implements
	  the interface and has a matching constructor.
	* Allow to call InitRuntime() multiple times to make sure that every
	  binding is initialized.

2008-07-06  Arno Rehn  <arno@arnorehn.de>

	* mono_jit_cleanup() is now called from a function that is registered
	  via atexit(). This seems to be the only way to do that, since calling
	  it from the destructor of KimonoPluginFactory makes mono crash.
	* Added camelize() method from krubypluginfactory.
	* Added "KSharedPtr<KSharedConfig>" to the marshallers array.

2008-07-01  Arno Rehn  <arno@arnorehn.de>

	* Added KMonoPluginFactory. Behaves similar to KRubyPluginFactory:
		* If the keyword is Foo/Bar.dll, a class 'Bar' is searched in the
		  namespace 'Foo'.
		* This class has to have a constructor that takes a QObject (the
		  parent) and a List<QVariant> (the arguments).

2008-06-24  Richard Dale  <richard.j.dale@gmail.com>

	* Make both the smoke lib and the kimono bindings use non-const methods
	  in preference to const ones. This is because KConfigBase::group() 
	  behaves differently according to whether the const on non-const
	  version is called via overloading in C++. The non-const variant
	  will now be called in C#, otherwise it appears that the KConfigGroup 
	  returned would silently fail to write anything to disc.

2008-06-18  Richard Dale  <richard.j.dale@gmail.com>

	* Change some namespaces to classes as calling the methods via 'Global'
	  looked a bit clumsy. For instance, KConfig.Global.Config() or
	  KStandardAction.Global.Quit() looked wrong.
	* Add a KSharedConfigPtr marshaller

2008-06-19  Arno Rehn  <arno@arnorehn.de>
