@@ -33,7 +33,7 @@ namespace Kimono {
     /// </author>
     ///         <short> Controls and provides information to all KDE applications. </short>
     [SmokeClass("KApplication")]
-    public class KApplication : QApplication, IDisposable {
+    public partial class KApplication : QApplication, IDisposable {
         protected KApplication(Type dummy) : base((Type) null) {}
         protected new void CreateProxy() {
             interceptor = new SmokeInvocation(typeof(KApplication), this);
@@ -51,25 +51,6 @@ namespace Kimono {
         // int xErrhandler(Display* arg1,void* arg2); >>>> NOT CONVERTED
         // int xioErrhandler(Display* arg1); >>>> NOT CONVERTED
         // void iceIOErrorHandler(_IceConn* arg1); >>>> NOT CONVERTED
-        /// <remarks>
-        ///  This constructor is the one you should use.
-        ///  It takes aboutData and command line arguments from KCmdLineArgs.
-        /// <param> name="GUIenabled" Set to false to disable all GUI stuff.
-        ///  Note that for a non-GUI daemon, you might want to use QCoreApplication
-        ///  and a KComponentData instance instead. The main difference will be
-        ///  that you'll have to register to DBus yourself, but there is no
-        ///  point in a kdeui dependency in a non-GUI daemon.
-        ///    </param></remarks>        <short>    This constructor is the one you should use.</short>
-        public KApplication(bool GUIenabled) : this((Type) null) {
-            CreateProxy();
-            interceptor.Invoke("KApplication$", "KApplication(bool)", typeof(void), typeof(bool), GUIenabled);
-            qApp = this;
-        }
-        public KApplication() : this((Type) null) {
-            CreateProxy();
-            interceptor.Invoke("KApplication", "KApplication()", typeof(void));
-            qApp = this;
-        }
         /// <remarks>
         ///  Returns the application session config object.
         /// </remarks>        <return> A pointer to the application's instance specific
@@ -234,13 +215,6 @@ namespace Kimono {
         [Q_SLOT("void quit()")]
         public new void Quit() {
             interceptor.Invoke("quit", "quit()", typeof(void));
-        }
-        /// <remarks>
-        ///    </remarks>        <short>   </short>
-        public KApplication(bool GUIenabled, KComponentData cData) : this((Type) null) {
-            CreateProxy();
-            interceptor.Invoke("KApplication$#", "KApplication(bool, const KComponentData&)", typeof(void), typeof(bool), GUIenabled, typeof(KComponentData), cData);
-            qApp = this;
         }
         ~KApplication() {
             interceptor.Invoke("~KApplication", "~KApplication()", typeof(void));
