@@ -110,6 +110,15 @@ namespace Kimono {
         ///  before the application exits. The standard behavior is to exit on the
         ///  "last window closed" event, but some events should outlive the last window closed
         ///  (e.g. a file copy for a file manager, or 'compacting folders on exit' for a mail client).
+        ///  We have some use cases that we want to take care of (the format is "action refcount"):
+        ///  - open window . setAllowQuit(true) 1 ; close window 0 => EXIT
+        ///  - job start 1; job end 0 [don't exit yet]; open window . setAllowQuit(true) 1 ; close window 0 => EXIT
+        ///  - job start 1; open window . setAllowQuit(true) 2; close window 1; job end 0 => EXIT
+        ///  - job start 1; open window . setAllowQuit(true) 2; job end 1; close window 0 => EXIT
+        ///  - open dialog 0; close dialog 0; => DO NOT EXIT
+        ///  - job start 1; job end 0; create two main objects 2; delete both main objects 0 => EXIT
+        ///  - open window . setAllowQuit(true) 1; add systray icon 2; close window 1 => DO NOT EXIT
+        ///  - open window . setAllowQuit(true) 1; add systray icon 2; remove systray icon 1; close window 0 => EXIT
         ///  Note that for this to happen you must call qApp.SetQuitOnLastWindowClosed(false),
         ///  in main() for instance.
         ///      </remarks>        <short>    Tells KGlobal about one more operations that should be finished  before the application exits.</short>
@@ -122,6 +131,13 @@ namespace Kimono {
         ///      </remarks>        <short>    Tells KGlobal that one operation such as those described in ref() just finished.</short>
         public static void Deref() {
             staticInterceptor.Invoke("deref", "deref()", typeof(void));
+        }
+        /// <remarks>
+        ///  If refcounting reaches 0 (or less), and <code>allowQuit</code> is true, the instance of the application
+        ///  will automatically be exited. Otherwise, the application will not exit automatically.
+        /// </remarks>        <short>    If refcounting reaches 0 (or less), and <code>allowQuit</code> is true, the instance of the application  will automatically be exited.</short>
+        public static void SetAllowQuit(bool allowQuit) {
+            staticInterceptor.Invoke("setAllowQuit$", "setAllowQuit(bool)", typeof(void), typeof(bool), allowQuit);
         }
         /// <remarks>
         ///  The component currently active (useful in a multi-component
