@@ -168,18 +168,26 @@ namespace KIO {
         ///  Call to signal an error.
         ///  This also finishes the job, so you must not call
         ///  finished() after calling this.
-        ///  If the Error code is KIO.ERR_SLAVE_DEFINED then the
+        ///  If the error code is KIO.ERR_SLAVE_DEFINED then the
         ///  _text should contain the complete translated text of
-        ///  of the error message.  This message will be displayed
-        ///  in an KTextBrowser which allows rich text complete
-        ///  with hyper links.  Email links will call the default
-        ///  mailer, "exec:/command arg1 arg2" will be forked and
-        ///  all other links will call the default browser.
+        ///  of the error message.
+        ///  For all other error codes, _text should match the corresponding
+        ///  error code. Usually,, _text is a file or host name, or the error which
+        ///  was passed from the server.<br>
+        ///  For example, for KIO.ERR_DOES_NOT_EXIST, _text may only
+        ///  be the file or folder which does not exist, nothing else. Otherwise,
+        ///  this would break error strings generated by KIO.BuildErrorString().<br>
+        ///  If you have to add more details than what the standard error codes
+        ///  provide, you'll need to use KIO.ERR_SLAVE_DEFINED.
+        ///  For a complete list of what _text should contain for each error code,
+        ///  look at the source of KIO.BuildErrorString().
+        ///  You can add rich text markup to the message, the places where the
+        ///  error message will be displayed are rich text aware.
         /// <param> name="_errid" the error code from KIO.Error
         /// </param><param> name="_text" the rich text error message
         ///      </param></remarks>        <short>    Call to signal an error.</short>
         ///         <see> Error</see>
-        ///         <see> KTextBrowser</see>
+        ///         <see> buildErrorString</see>
         public void error(int _errid, string _text) {
             interceptor.Invoke("error$$", "error(int, const QString&)", typeof(void), typeof(int), _errid, typeof(string), _text);
         }
